@@ -2,6 +2,9 @@ package daelim.learning.reply.service;
 
 import daelim.learning.board.Board;
 import daelim.learning.board.BoardRepository;
+import daelim.learning.reply.dto.ChildReplyResponse;
+import daelim.learning.reply.entity.ChildReply;
+import daelim.learning.reply.repository.ChildReplyRepository;
 import daelim.learning.reply.repository.ReplyRepository;
 import daelim.learning.reply.entity.Reply;
 import daelim.learning.reply.dto.ReplyListResponse;
@@ -13,7 +16,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,8 +26,11 @@ import java.util.List;
 public class ReplyService {
 
     private final ReplyRepository replyRepository;
+    private final ChildReplyRepository childReplyRepository;
+
     private final BoardRepository boardRepository;
     private final UserRepository userRepository;
+
 
     public void save(ReplyRequest replyRequest, Long boardNo, HttpSession session) {
 
@@ -37,22 +45,38 @@ public class ReplyService {
         replyRepository.save(reply);
     }
 
-    // 부모 조회
+    // 부모 댓글, 자식 댓글 모두 조회
     public List<ReplyListResponse> findAll(Long boardNo) {
-        return replyRepository.findByBoardNoBoardNo(boardNo).stream().map(
-                reply -> ReplyListResponse.builder()
-                        .comment(reply.getComment())
-                        .user(reply.getUserNo())
-                        .replyNo(reply.getReplyNo())
-                        .build()
-        ).toList();
+        List<Reply> replies = replyRepository.findByBoardNo(boardNo); // 부모 댓글 가져오기
+        List<ReplyListResponse> replyListResponses = new ArrayList<>();
+
+        for(Reply reply : replies) {
+            List<ChildReply> childReplies = childReplyRepository.findByReplyNo(reply.getReplyNo());
+
+            List<ChildReplyResponse> childReplyResponseList = childReplies.stream()
+                    .map(childReply -> ChildReplyResponse.builder()
+                            .childNo(childReply.getChildNo())
+                            .childComment(childReply.getComment())
+                            .childWriter(childReply.getUserNo().getUserName())
+                            .build())
+                    .collect(Collectors.toList());
+
+            ReplyListResponse response = ReplyListResponse.builder()
+                    .replyNo(reply.getReplyNo())
+                    .comment(reply.getComment())
+                    .user(reply.getUserNo())
+                    .childReplyResponseList(childReplyResponseList)
+                    .build();
+
+            replyListResponses.add(response);
+        }
+
+        return replyListResponses;
     }
 
     // 수정
     public void update(ReplyRequest replyRequest, Long replyNo) {
-        Reply reply = replyRepository.findById(replyNo).orElseThrow();
-        reply.setComment(replyRequest.getComment());
-        replyRepository.save(reply);
+        replyRepository.updateCommentById(replyNo, replyRequest.getComment());
     }
 
     public void delete(Long replyNo) {
